# sample_backend

./: .gitignore  NOTES.md  README.md  REQUIREMENTS.md  manage.py  pyproject.toml
crowdstreet_backend/: asgi.py  settings.py  urls.py  wsgi.py
jobtrack/: apps.py  models.py  service_client.py  tests.py  urls.py  views.py
jobtrack/migrations/: 0001_initial.py
sample_backend/: asgi.py  settings.py  urls.py  wsgi.py
