[tool.poetry]
name = "crowdstreet_backend"
version = "0.1.0"
description = ""
authors = ["Myers Carpenter <myers@maski.org>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
